# CMakeProject

./: .gitignore  generate_x64_vs2013.bat  generate_x64_vs2015.bat  generate_x64_vs2015_release.bat  generate_x86_vs2013.bat  generate_x86_vs2015.bat  generate_x86_vs2015_release.bat  readme.txt
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  demo.cpp
src/demo_dll/: CMakeLists.txt  demo_dll.cpp  demo_dll.h
src/demo_gtest/: CMakeLists.txt  demo_unittest.cpp
src/demo_lib/: CMakeLists.txt  demo_lib.cpp  demo_lib.h
src/demo_qt/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
src/mysql_soci_demo/: CMakeLists.txt  data.sql  demo.cpp
src/protobuf_demo/: CMakeLists.txt  compile.bat  data.proto2  data.proto2.pb.cc  data.proto2.pb.h  demo.cpp
