CMAKE_MINIMUM_REQUIRED(VERSION 3.2.3 FATAL_ERROR)

PROJECT(cmake_project)

IF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X86)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/x86/windows/archive")
		SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/x86/windows/library")
		SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/x86/windows/runtime")
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ELSEIF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X64)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/x64/windows/archive")
		SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/x64/windows/library")
		SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/x64/windows/runtime")
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ELSEIF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_ARM)
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/arm/archive")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/arm/library")
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/arm/runtime")
ENDIF()

IF(MSVC)#MSVC，就是微软（MS）的VC运行库
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4819 /wd4996")#设置c++编译选择
ELSEIF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
ENDIF(MSVC)

ADD_SUBDIRECTORY(demo)
ADD_SUBDIRECTORY(demo_lib)
ADD_SUBDIRECTORY(demo_dll)
ADD_SUBDIRECTORY(demo_qt)
ADD_SUBDIRECTORY(demo_gtest)
