#demo_unittest
CMAKE_MINIMUM_REQUIRED(VERSION 3.2.3 FATAL_ERROR)

PROJECT(demo_unittest)

AUX_SOURCE_DIRECTORY(. SRC_DEMO_UNITTEST)
ADD_EXECUTABLE(${PROJECT_NAME}
	${SRC_DEMO_UNITTEST})

#boost
SET(BOOST_ROOT "$ENV{BOOST_HOME}")	#ENV:BOOST_HOME
SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.59.0 REQUIRED COMPONENTS system regex date_time atomic chrono thread filesystem log log_setup program_options)
IF(Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
ELSE(Boost_FOUND)
	MESSAGE(FATAL_ERROR "Boost not found!")
ENDIF(Boost_FOUND)

#gtest
SET(GTEST_ROOT "$ENV{GTEST_HOME}")	#ENV:GTEST_HOME
FIND_PACKAGE(GTest REQUIRED)
IF(GTEST_FOUND)
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTEST_BOTH_LIBRARIES})
ELSE(GTEST_FOUND)
	MESSAGE(FATAL_ERROR "GTest not found!")
ENDIF(GTEST_FOUND)
