CMAKE_MINIMUM_REQUIRED(VERSION 3.6.1 FATAL_ERROR)

PROJECT(demo_qt)

#QT
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
IF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X86)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		SET(CMAKE_PREFIX_PATH "$ENV{QT_HOME}")
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ELSEIF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X64)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		SET(CMAKE_PREFIX_PATH "$ENV{QT64_HOME}")
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ENDIF()
FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Charts)
FIND_PACKAGE(Qt5PrintSupport)
ADD_DEFINITIONS(${QT_DEFINITIONS})

SET(LIBCHART_DEMO_UI
	main_window.ui)

QT5_WRAP_UI(LIBCHART_DEMO_UIS ${LIBCHART_DEMO_UI})
QT5_WRAP_CPP(LIBCHART_DEMO_MOCS
	main_window.h)

FILE(GLOB HDR_LIBCHART_DEMO ${PROJECT_SOURCE_DIR}/*.h)
AUX_SOURCE_DIRECTORY(. SRC_LIBCHART_DEMO)
ADD_EXECUTABLE(${PROJECT_NAME} WIN32
	${SRC_LIBCHART_DEMO}
	${HDR_LIBCHART_DEMO}
	${LIBCHART_DEMO_MOCS}
	${LIBCHART_DEMO_UIS}
	${LIBCHART_DEMO_UI})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Widgets Qt5::Charts Qt5::PrintSupport)

#boost
SET(BOOST_ROOT "$ENV{BOOST_HOME}")
SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.59.0 REQUIRED COMPONENTS system regex date_time atomic chrono thread filesystem log log_setup program_options)
IF(Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
ELSE(Boost_FOUND)
    MESSAGE(FATAL_ERROR "Boost not found!")
ENDIF(Boost_FOUND)

IF(MSVC)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/MP")
    CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/../../other/VSUserTemplate.vcxproj.user" "${PROJECT_BINARY_DIR}/${PROJECT_NAME}.vcxproj.user")
ENDIF(MSVC)
