CMAKE_MINIMUM_REQUIRED(VERSION 3.6.1 FATAL_ERROR)

PROJECT(protobuf_demo)

FILE(GLOB HDR_DEMO ${PROJECT_SOURCE_DIR}/*.h)	#文件操作命令
AUX_SOURCE_DIRECTORY(. SRC_DEMO)				#将源代码文件存储到变量中
ADD_EXECUTABLE(${PROJECT_NAME}
	${SRC_DEMO}
	${HDR_DEMO}
	data.proto2)#添加可执行文件

#boost
IF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X86)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		#boost X86
		SET(BOOST_ROOT "$ENV{BOOST_X86_HOME}")	#ENV:BOOST_X86_HOME
		SET(Boost_USE_STATIC_LIBS ON)
		FIND_PACKAGE(Boost 1.62.0 REQUIRED COMPONENTS system regex date_time atomic chrono thread filesystem log log_setup program_options)
		IF(Boost_FOUND)
			INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
			TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
		ELSE(Boost_FOUND)
			MESSAGE(FATAL_ERROR "Boost not found!")
		ENDIF(Boost_FOUND)
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ELSEIF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X64)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		#boost X64
		SET(BOOST_ROOT "$ENV{BOOST_X64_HOME}")	#ENV:BOOST_X64_HOME
		SET(Boost_USE_STATIC_LIBS ON)
		FIND_PACKAGE(Boost 1.62.0 REQUIRED COMPONENTS system regex date_time atomic chrono thread filesystem log log_setup program_options)
		IF(Boost_FOUND)
			INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
			TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
		ELSE(Boost_FOUND)
			MESSAGE(FATAL_ERROR "Boost not found!")
		ENDIF(Boost_FOUND)
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ELSEIF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_ARM)
ENDIF()

#protobuf PROTOBUF_X86_HOME PROTOBUF_X64_HOME 将Release版本protoc可执行程序目录添加到环境变量
IF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X86)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		INCLUDE_DIRECTORIES("$ENV{PROTOBUF_X86_HOME}/src")
		TARGET_LINK_LIBRARIES(${PROJECT_NAME} optimized "$ENV{PROTOBUF_X86_HOME}/build_vsproject/Release/libprotobuf.lib" debug "$ENV{PROTOBUF_X86_HOME}/build_vsproject/Debug/libprotobufd.lib")
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ELSEIF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_X64)
	IF($ENV{HOST_OS} STREQUAL OS_WINDOWS)
		INCLUDE_DIRECTORIES("$ENV{PROTOBUF_X64_HOME}/src")
		TARGET_LINK_LIBRARIES(${PROJECT_NAME} optimized "$ENV{PROTOBUF_X64_HOME}/build_vsproject/Release/libprotobuf.lib" debug "$ENV{PROTOBUF_X64_HOME}/build_vsproject/Debug/libprotobufd.lib")
	ELSEIF($ENV{HOST_OS} STREQUAL OS_LINUX)
	ENDIF()
ELSEIF($ENV{HOST_PLATFORM} STREQUAL PLATFORM_ARM)
ENDIF()